现在子命令会在没有权限的时候提示，删除未使用的`command.recipebook.success`翻译文本